Add api documentation for get post and getAll
